Fix 'Alt+C' closing split view

setText will create a shortcut with alt+C.
But setText call is not needed here.

BUG: 424654
FIXED-IN: 20.08.3